--- a/carrental.client/src/app/app.component.css
+++ b/carrental.client/src/app/app.component.css
@@ -1,4 +1,4 @@
-﻿:host {
+:host {
     max-width: 1280px;
     padding: 2rem;
     text-align: center;
@@ -11,4 +11,13 @@ th, td {
 
 table {
     margin: 0 auto;
+}
+
+.report-buttons {
+  display: flex;
+  gap: 8px;
+}
+
+.spacer {
+  flex-grow: 1;
 }
